--- a/default.css
+++ b/default.css
@@ -4,8 +4,8 @@ body, html {
     height: 100%;
     padding: 0;
     margin: 0;
-    font-family: Courier New;
-    font-size: 14px;
+    font-family: Arial;
+    font-size: 12px;
     background-color:#FFFFFF;
 }
 
@@ -16,23 +16,22 @@ body, html {
 div.pve-debug {
     padding: 1em;
     display: flex;
-    background-color: silver;
+    flex-wrap: wrap;
 }
 
 div.pve-debug-control {
-    padding: 0.25em;
 }
 
 div.pve-debug-control button {
-    font-family: Courier New;
+    font-family: Arial;
     font-size: 14px;
     width: 80px;
     margin-right: 1em;
     cursor: pointer;
 }
 
-div.pve-debug-entity {
-    width: 150px;
+div.pve-debug-entity, div.pve-debug-control {
+    width: 100px;
     margin-right: 1em;
 }
 
